# helios

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  AppIcon.rc  BUILDME.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  COPYING  Dockerfile  Doxyfile  LICENSE.md  MANIFEST.in  README.md  broadening_compare.py  clipped_subray_grid.csv  codecov.yml  conda-environment.yml  environment-dev.yml  helios_state.json  newapi.ipynb  pdal_pyhelios_env.yml  polar_footprint.csv  pyproject.toml  run_pyhelios_test.py  setup.py  subray_grid.csv  temporal_broadening.py  test.py  test_scanningdevice.py
benchmarks/: CMakeLists.txt  README.md  base_energy_model_compute_received_power_b.cpp  comparison_workflow.sh  empty_b.cpp  fullwaveform_compute_subrays_b.cpp  fullwaveform_digest_intersections_b.cpp  fullwaveform_find_intersection_b.cpp  initial_setup.sh  macro_playback_b.cpp  scanning_device_sim_step_b.cpp
doc/: .gitignore  01-tls_arbaro.nblink  02-mls_wheat_field.nblink  03-mls_toyblocks.nblink  04-uls_toyblocks.nblink  05-als_hd_demo.nblink  06-als_hd_height_above_ground.nblink  07-tls_sphere_xyzloader.nblink  08-als_uls_detailed_voxel.nblink  09-tls_livox_demo.nblink  10-uls_toyblocks_livox.nblink  11-als_toyblock_multi_scanner_livox.nblink  12-multi_scanner_puck.nblink  13-interpolated_trajectory.nblink  17-dji-zenmuse-l2_demo.nblink  CMakeLists.txt  GDAL_INSTALL.txt  README.md  cli.rst  conf.py  cppapi.rst  error_randomness.rst  index.rst  intensity_fwf.rst  intro.rst  mkdocs.yml  notebooks.rst  power_sep_interactive.ipynb  python.rst  pythonapi.rst  quickstart.ipynb  quickstart.nblink  requirements-rtd.txt  requirements.txt  scanner_platforms.rst  scanners_and_platforms.ipynb  scanners_and_platforms.nblink  scanners_platforms.rst  scene.ipynb  scene.nblink  (+5 more)
doc/debug/: DEBUG.md
doc/docs/: index.md  pythonapi.md
doc/html/: annotated.html  annotated_dup.js  classes.html  classes.html.orig  dir_000001_000014.html  dir_000001_000017.html  dir_000001_000020.html  dir_000001_000028.html  dir_000001_000032.html  dir_000001_000054.html  dir_000002_000014.html  dir_000003_000014.html  dir_000003_000020.html  dir_000003_000029.html  dir_000004_000050.html  dir_000005_000014.html  dir_000006_000029.html  dir_000006_000051.html  dir_000006_000054.html  dir_000007_000014.html  dir_000007_000042.html  dir_000007_000053.html  dir_000008_000014.html  dir_000008_000050.html  dir_000009_000014.html  dir_000009_000054.html  dir_000010_000014.html  dir_000010_000054.html  dir_000011_000014.html  dir_000011_000015.html  dir_000011_000042.html  dir_000011_000049.html  dir_000011_000054.html  dir_000012_000014.html  dir_000012_000017.html  dir_000013_000049.html  dir_000013_000053.html  dir_000014_000015.html  dir_000014_000030.html  dir_000016_000028.html  (+699 more)
doc/overrides/: main.html
src/: CMakeLists.txt  LidarSim.cpp  LidarSim.h  helios_version.cpp  helios_version.h
src/adt/: CMakeLists.txt
src/alg/: CMakeLists.txt
src/assetloading/: Asset.cpp  Asset.h  CMakeLists.txt  EggAsset.h  LadLutLoader.cpp  LadLutLoader.h  MaterialsFileReader.cpp  MaterialsFileReader.h  SceneLoadingSpecification.cpp  SceneLoadingSpecification.h  ScenePart.cpp  ScenePart.h  SparseXYZPointCloudFileLoader.h  SpectralLibrary.cpp  SpectralLibrary.h  SwapOnRepeatHandler.cpp  SwapOnRepeatHandler.h  VoxelFileParser.cpp  VoxelFileParser.h  XmlAssetsLoader.cpp  XmlAssetsLoader.h  XmlSceneLoader.cpp  XmlSceneLoader.h  XmlSurveyLoader.cpp  XmlSurveyLoader.h  XmlUtils.cpp  XmlUtils.h  XmlUtils.tpp
src/binds/: CMakeLists.txt  GLMTypeCaster.h  SimulationCycleCallbackWrap.h  utils.h
src/dataanalytics/: CMakeLists.txt  HDA_GlobalVars.cpp  HDA_GlobalVars.h  HDA_GlobalVarsReporter.h  HDA_OfstreamWrapper.h  HDA_PulseRecorder.cpp  HDA_PulseRecorder.h  HDA_RecordBuffer.h  HDA_Recorder.cpp  HDA_Recorder.h  HDA_SimStepRecorder.cpp  HDA_SimStepRecorder.h  HDA_StateJSONReporter.cpp  HDA_StateJSONReporter.h
src/demo/: BaseDemo.h  CMakeLists.txt  DemoSelector.cpp  DemoSelector.h  DynamicSceneDemo.cpp  DynamicSceneDemo.h  RaycastingDemo.cpp  RaycastingDemo.h  SimplePrimitivesDemo.cpp  SimplePrimitivesDemo.h  SurveyDemo.cpp  SurveyDemo.h
src/filems/: CMakeLists.txt
src/hpc/: CMakeLists.txt  SM_ParallelMergeSort.h  SM_ParallelMergeSort.tpp  SM_ParallelMergeSortSubTask.h
src/main/: ArgumentsParser.cpp  ArgumentsParser.h  CMakeLists.txt  LidarSim.cpp  LidarSim.h  Main.cpp  MainHelp.h  helios_version.cpp  helios_version.cpp.in  helios_version.h
src/maths/: CMakeLists.txt  Directions.cpp  Directions.h  EnergyMaths.cpp  EnergyMaths.h  Histogram.hpp  Histogram.tpp  LadLut.cpp  LadLut.h  MathConstants.h  MathConverter.h  PlaneFitter.h  RayUtils.cpp  RayUtils.h  Rotation.cpp  Rotation.h  RotationOrder.cpp  RotationOrder.h  TrigoTricks.h  Vectorial.cpp  Vectorial.h  WaveMaths.cpp  WaveMaths.h
src/noise/: CMakeLists.txt  NoiseSource.h  NormalNoiseSource.h  RandomNoiseSource.h  RandomnessGenerator.cpp  RandomnessGenerator.h  UniformNoiseSource.h
src/platform/: CMakeLists.txt  GroundVehiclePlatform.cpp  GroundVehiclePlatform.h  HelicopterPlatform.cpp  HelicopterPlatform.h  InterpolatedMovingPlatform.cpp  InterpolatedMovingPlatform.h  InterpolatedMovingPlatformEgg.h  LinearPathPlatform.cpp  LinearPathPlatform.h  MovingPlatform.cpp  MovingPlatform.h  Platform.cpp  Platform.h  PlatformSettings.cpp  PlatformSettings.h  SimplePhysicsPlatform.cpp  SimplePhysicsPlatform.h
src/pybinds/: CMakeLists.txt  GLMTypeCaster.h  PyAABBWrapper.h  PyBeamDeflectorWrapper.h  PyDetailedVoxelWrapper.h  PyDetectorWrapper.h  PyDoubleVector.h  PyHelios.cpp  PyHeliosException.h  PyHeliosOutputWrapper.h  PyHeliosSimulation.cpp  PyHeliosSimulation.h  PyHeliosUtils.h  PyIntegerList.h  PyMeasurementVectorWrapper.h  PyMeasurementWrapper.h  PyNoiseSourceWrapper.h  PyPlatformWrapper.h  PyPrimitiveWrapper.h  PyRandomnessGeneratorWrapper.h  PyRaySceneIntersectionWrapper.h  PyScannerWrapper.cpp  PyScannerWrapper.h  PyScanningStripWrapper.h  PyScenePartWrapper.cpp  PyScenePartWrapper.h  PySceneWrapper.cpp  PySceneWrapper.h  PyStringVector.h  (+7 more)
(+4670 files in other folders)
