[build-system]
requires = [
    "scikit-build-core",
    "setuptools_scm",
    "pybind11[global]>=2.10.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "helios"
dynamic = ["version"]
description = "The HELIOS++ Virtual Laser Scanning Simulator"
readme = "README.md"
maintainers = [
    { name = "HELIOS++ dev team", email = "helios@uni-heidelberg.de" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["python/pyhelios/_version.py"]

[tool.scikit-build.cmake]
minimum-version = "3.18"

[tool.scikit-build.cmake.define]
BUILD_DOCS = "OFF"
BUILD_PYTHON = "ON"
HELIOS_DATA_ANALYTICS = "0"
HELIOS_BUDDING_METRICS = "0"
# Executable built and installed during "pip install" should
# find the shared libaries of their dependencies without manual
# fiddling with LD_LIBRARY_PATH. As a downside, the built executables
# are not relocatable.
CMAKE_INSTALL_RPATH_USE_LINK_PATH = "ON"

[tool.setuptools_scm]  # Section required
write_to = "python/pyhelios/_version.py"

[tool.cibuildwheel]
# Super-verbose output for debugging purpose
build-verbosity = 3
# Testing commands for our wheels
test-command = "PYTHONPATH=$(pwd)/python pytest {package}/tests/python"
test-requires = ["pytest", "ruptures"]
[tool.pytest.ini_options]
testpaths = [
    "tests/python",
]
