add_subdirectory(adt)
add_subdirectory(alg)
add_subdirectory(assetloading)
add_subdirectory(dataanalytics)
add_subdirectory(demo)
add_subdirectory(filems)
add_subdirectory(hpc)
add_subdirectory(main)
add_subdirectory(maths)
add_subdirectory(noise)
add_subdirectory(platform)
add_subdirectory(binds)
add_subdirectory(scanner)
add_subdirectory(scene)
add_subdirectory(sim)
add_subdirectory(surfaceinspector)
add_subdirectory(test)
add_subdirectory(util)
add_subdirectory(visualhelios)

target_include_directories(helios PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
